css/global.css
/* ... */
footer ul {
	padding-left: 0px;
	padding-inline-start: 0px;
}

/* Forms */

/* 
===================================
Wrappers (container, flexbox, etc.)
===================================
*/

/* Container */

/* Wrappers */
.wrapper {
	width: var(--mobile-wrapper-width);
	margin: 0 auto;
	max-width: var(--wrapper-width-max);
}

/* Global Hidden Class */
.hidden {
	display: none;
}
/* 
===================================
Global Component Styles (buttons, forms, etc.)
===================================
*/

/* Buttons */
/* footer submit button */
.text-input .button2 {
	border-radius: 10px;
	background-color: var(--button2-color);
	padding: var(--spacing10) var(--spacing40);
	color: var(--color-white);
	border: none;
	min-width: 187px;
	min-height: 50px;
	margin: var(--spacing20);
	font-weight: var(--font-weight-bold);
	font-size: var(--font21);
}

.text-input .button2:hover {
	background-color: var(--color-white);
	color: var(--color-onyx);
}

/* FOOTER STYLES */
footer {
	background-color: var(--color-onyx);
	color: var(--color-white);
}

/* Transition and transform for logo and social links for better visual */
footer a img {
	transition: all 0.1s ease-in;
}
footer a img:hover {
	transform: scale(110%);
}

/* footer main is the container for all content except for very bottom links */
.footer-main {
	padding: var(--spacing40) 0;
	display: flex;
	flex-direction: column;
	align-items: center;
}

/* Logo and land acknowledgement button container*/
.footer-logo-btn {
	display: flex;
	flex-direction: column;
	align-items: center;
}
/* footer links list */
.links-columns {
	min-width: 250px;
}
/* Land Acknowledgement button */
.btn-la {
	background-color: transparent;
	color: var(--color-white);
	border: none;
	margin: var(--spacing40) 0;
	font-size: var(--font21);
}

/* hover effect on all footer links */
.btn-la:hover{
	border-bottom: 2px solid var(--color-white);
}

/* Form Styles */
form {
	text-align: center;
	padding: var(--spacing20);
}
.text-input {
	display: flex;
	flex-direction: column;
	align-items: center;
}
.text-input input {
	height: 50px;
	width: 100%;
	border-radius: 10px;
	border: none;
}
#newsletter-input {
	padding-left: 24px;
}

/* bottom links */
.bottom-links {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
}

.social-svgs {
	display: flex;
	flex-direction: row;
	column-gap: 20px;
}

/* MODAL */
.hidden {
	display: none;
}
/* positioning for body to stop scroll when modal is open */
.fixed {
	position: fixed;
	width: 100%;
}
/* modal overlay */
.overlay-la {
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, 0.5);
	backdrop-filter: blur(3px);
	z-index: 1;
}
.modal {
	width: 90%;
	max-width: 1100px;
	max-height: 90vh;
	margin: 0 auto;
	/* was 26px and replaced with variable */
	padding: var(--spacing20);
	position: fixed;
	left: 0;
	right: 0;
	top: 2vh;
	background-color: var(--body-background-color);
	color: var(--color-onyx);
	border: 1px solid var(--body-background-color);
	border-radius: 4px;
	z-index: 30;
}

.modal-wrapper {
	position: relative;
}
.modal-content {
	overflow-y: scroll;
	max-height: 65vh;
}
.modal-scroll {
	max-height: calc(85vh 300px);
}
/* modal text content */
.modal p {
	color: var(--color-onyx);
	margin: var(--spacing20);
}
.modal-header h4 {
	text-align: center;
	color: var(--color-onyx);
	margin-bottom: 0px;
}
.btn-close {
	position: absolute;
	right: -10px;
	top: -40px;
}
.btn-close button {
	border: none;
	background-color: transparent;
}
.btn-close svg {
	width: 32px;
	height: 32px;
}

/* End of modal styles */

/* 
===================================
Media Queries (overriding styles for different screen sizes)
Feel free to change the min/max-width values to whatever you need. Use variables.
===================================
*/ 

/* Desktop & Larger */
@media (min-width: 1024px) {
	/* Footer styles */
	.wrapper {
		width: var(--desktop-wrapper-width);
	}

	.footer-main {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
	}
	.footer-main h4 {
		font-size: var(--font36);
		font-weight: var(--font-weight-bold);
		line-height: 0px;
		color: var(--color-white);
	}
	.footer-main p {
		margin: 0px;
	}
	footer li {
		text-align: left;
	}

	.footer-logo-btn {
		align-items: start;
	}
	.links-columns {
		display: flex;
		flex-direction: row;
		justify-content: space-around;
		width: 30%;
		gap: 10%;
	}
	.links-child {
		display: flex;
		flex-direction: column;
		width: fit-content;
	}
	.footer-form {
		width: 40%;
	}
	form {
		display: flex;
		flex-direction: column;
		text-align: left;
		/* removing padding on button to align with content */
		padding-right: 0px;
	}
	form p {
		color: var(--color-white);
		width: 60%;
	}
	.text-input {
		display: flex;
		flex-direction: row;
		align-items: center;
	}
	/* removing margin on button to align with content */
	.text-input .button2 {
		margin-right: 0px;
	}

	.modal-content {
		overflow-y: auto;
	}

	.modal-scroll {
		padding: var(--spacing20);
	}

	/* End of footer styles */
}

/* Tablet Only */
@media screen and (min-width: 768px) and (max-width: 1024px) {
	.modal-scroll {
		padding: var(--spacing20);
	}
	.links-columns{
		display: flex;
		flex-direction: row;
		justify-content: space-evenly;
		width: 80%;
	}
	.links-child {
		display: flex;
		flex-direction: column;
	}	
}
/* Desktop & Larger */
@media screen and (min-width: 1024px) {
	/* adjusting font sizes and styling for p tags (in figma this is body1)*/
	p {
		font-size: var(--font21);
		font-weight: var(--font-weight-regular);
		line-height: var(--line-height26);
		color: var(--color-onyx);
	}
	.text-input {
		display: flex;
		flex-direction: column;
		align-items: start;
	}
	.text-input .button2 {
		margin-left: 0px;
	}
	form p{
		width: 100%;
		padding-bottom: var(--spacing10);
	}
}

/* For larger screens */
@media (min-width: 1280px) {
	footer {
		padding: 0 var(--spacing65);
	}
}
/* ... */

